--- a/bootstraplearning/index.html
+++ b/bootstraplearning/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link active aria-current=" page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="/first_website_bootstrap/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,7 +43,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact us</a>
+            <a class="nav-link" href="/first_website_bootstrap/contact.html">Contact us</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
